<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Makaut Study Buddy</string>
    <string name="makaut_organizer_description">MAKAUT ORGANIZER contains previous years Semester Exam questions with answers. Organizers doesn\'t contains all the Semester questions. It contains the question and answers of a particular semester. It is like a Holy Book for the students studying in colleges under MAKAUT. If you are thinking to start preparation for Semester Exam just 15 days before the exam then this thing will help you a lot.</string>
    <string name="makaut_organizer_book">Makaut Organizer Book</string>
    <string name="the_ultimate_examination_guide">The Ultimate\nExamination Guide</string>
    <string name="popular_publications">Popular Publications</string>
    <string name="makaut_organizer">MAKAUT Organizer</string>
    <string name="read_book">Read Book</string>
    <string name="branch_screen_title">Your department, your fate</string>
    <string name="subject_screen_title">Last-minute prep? Pick your subject!</string>
    <string name="failed_to_fetch_query_please_try_again">Failed to fetch query.\nPlease try again</string>
    <string name="error_image">error image</string>
    <string name="try_again">Try again</string>
    <string name="downloading">Downloading…</string>
    <string name="_35">35%</string>
    <string name="settings">Settings</string>
    <string name="back_button">back</string>
    <string name="rate_us">Rate Us</string>
    <string name="share_app">Share App</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="contact">Contact</string>
    <string name="feedback">Feedback</string>
    <string name="email_body_contact">Hi Subhajit,\n\nI hope this message finds you well. I am reaching out to seek assistance regarding the following issue I encountered while using the app:\n\n[Describe your issue or question here]\n\nI would appreciate your guidance on resolving this matter. Please let me know if you need additional information to assist me further.\n\nThank you for your support.\n\nBest regards\n[Your Name]\n[Your Contact Information, optional]</string>
    <string name="email_subject_contact">Need Assistance with the Makaut Study Buddy App</string>
    <string name="email_body_feedback">Hi Subhajit,\n\nI wanted to share my feedback about the app. Here\'s what I think:\n\n**What I like:**\n[Highlight the features you love or find helpful]\n\n**Suggestions for improvement:**\n[Suggest features or improvements]\n\n[Extra comments]\n\nBest regards,\n[Your Name]</string>
    <string name="email_subject_feedback">Feedback: Makaut Study Buddy App</string>
    <string name="branch_name">Branch name</string>
    <string name="semester">Semester:</string>
    <string name="organizer_name">Organizer Name</string>
    <string name="_5">5</string>
    <string name="cancel">Cancel</string>
    <string name="app_version_x_x_x_x">App version x.x.x (x)</string>
    <string name="organizers">Organizers</string>
    <string name="books">Books</string>
    <string name="notes">Notes</string>
    <string name="contribute">Contribute</string>
    <string name="upload">Upload</string>
    <string name="videos">Videos</string>
    <string name="excel_your">Excel your</string>
    <string name="exams">Exams</string>
    <string name="greeting_message">Explore various contents to</string>
    <string name="favourites">Favourites</string>
    <string name="onboarding_heading">Let\'s Study</string>
    <string name="onboarding_subheading" tools:ignore="TypographyEllipsis">Search Less,\nExplore More...</string>
    <string name="onboarding_description">Get all your organizer, books, notes and videos all in a single place. Find less, do more.</string>
    <string name="default_web_client_id">547075402114-bdg2t0c1c51n8refr8tmo1v8c8amlglt.apps.googleusercontent.com</string>
    <string name="log_out">Log Out</string>
    <string name="contributed_by">contributed by Subhajit</string>
    <string name="file_should_be_10mb"><![CDATA[*File should be <10MB]]></string>
    <string name="subject">Subject</string>
    <string name="semester_">Semester</string>
    <string name="branch">Branch</string>
    <string name="choose_file">Choose File*</string>
    <string name="submit_request">Submit Request</string>
    <string name="no_requests_found">No Requests found</string>
    <string name="no_videos_found">No Videos found</string>
    <string name="no_books_found">No Books found</string>
    <string name="there_are_no_records_nto_display_right_now">There are no records\nto display right now.</string>
    <string name="requests">Requests</string>
    <string name="read_online">Read Online</string>
    <string name="read_offline">Read Offline</string>
    <string name="example_file_name_pdf">example_file_name.pdf</string>
    <string name="uploading">Uploading…</string>
    <string name="contributed_by_who">contributed by %1$s</string>
    <string name="upload_requests_details_text">%1$s, Sem-%2$s, %3$s</string>
    <string name="upload_requests_status_text">Status: %1$s</string>
    <string name="topic_name">Topic Name</string>
    <string name="sem_1">Sem-1</string>
    <string name="sem_2">Sem-2</string>
    <string name="sem_3">Sem-3</string>
    <string name="sem_4">Sem-4</string>
    <string name="sem_5">Sem-5</string>
    <string name="sem_6">Sem-6</string>
    <string name="sem_7">Sem-7</string>
    <string name="sem_8">Sem-8</string>
    <string name="filename_after_pickup">%1$s [%2$sMB]</string>
    <string name="topic">Topic</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="video_title">Video Title</string>
    <string name="channel_name">Channel Name</string>
    <string name="no_downloads_found">No Downloads found</string>
    <string name="example_book_name_pdf">Example Book Name.pdf</string>
    <string name="delete">Delete</string>
    <string name="downloads">Downloads</string>
    <string name="request_tab_book_title">Economics</string>
    <string name="request_tab_book_description">Organizer, Sem-7, Information Technology</string>
    <string name="request_tab_book_status">Status: Pending</string>
    <string name="share_a_playlist">Share a playlist</string>
    <string name="playlist_link">Playlist link</string>
    <string name="only_educational_playlists_helpful_for_makaut_exams">*Only educational playlists helpful for MAKAUT exams</string>
    <string name="search_videos_hint_text" tools:ignore="TypographyEllipsis">Search videos...</string>
    <string name="search_books_hint_text" tools:ignore="TypographyEllipsis">Search your favorite book...</string>
    <string name="author_name">Author Name</string>
    <string name="request_tab_topic_author_name">Topic Name</string>
    <string name="are_you_sure_you_want_to_delete">Are you sure you want to delete?</string>
    <string name="book_title">Book Title</string>
    <string name="notes_by_students_professors"><![CDATA[Notes by Students & Professors]]></string>
    <string name="term_and_policy_agreement">By continuing, you agree to our Terms of Service and Privacy Policy.</string>
    <string name="or_swipe_to">or swipe to</string>
    <string name="login_as_guest">Login as Guest</string>
    <string name="syllabus">Syllabus</string>
    <string name="new_badge">New</string>
    <string name="last_updated">Last Updated:</string>
    <string name="semester_screen_title">Pick your semester</string>
    <string name="example_date">23–06–2025</string>
    <string name="ask_ai">Ask Ai</string>
    <string name="ask_ai_heading">Ask <font color="#83D65C">Ai</font></string>
    <string name="ai_page_title">What can I help with?</string>
    <string name="ai_message_box_hint">Ask your question…</string>
    <string name="send_message_to_ai">Send Message to AI</string>
    <string name="ai_page_description">Choose an Ai model from above and\nask me anything related to this page…</string>
    <string name="summarize">#Summarize</string>
    <string name="explain">#Explain</string>
    <string name="generate_mcqs">#Generate mcqs</string>
    <string name="page_snapshot">Page Snapshot</string>
    <string name="tap_to_speak">Tap to Speak</string>
    <string name="listening">Listening…</string>
    <string name="ask_ai_about_this_page">Ask Ai about this page</string>
    <string name="notifications">Notifications</string>
    <string name="notifications_description">Receive latest announcements from MAKAUT</string>
    <string name="premium_title">Go Premium</string>
    <string name="premium_description">Unlock Everything. Access to all AI Models. Go Ads free.</string>
    <string name="premium">Premium</string>
    <string name="premium_catchy_headline">Go Limitless with Premium.</string>
    <string name="premium_catchy_headline_premium_version">Currently Subscribed to Premium.</string>
    <string name="why_join_premium">Why join Premium?</string>
    <string name="unlock_all_content">Unlock all content</string>
    <string name="get_access_to_all_ai_models">Get Access to all AI models</string>
    <string name="get_faster_responses_using_better_ai_models">Get faster responses using better AI models</string>
    <string name="go_ads_free">Go Ads free</string>
    <string name="access_to_all_future_premium_content">Access to all future premium content</string>
    <string name="early_access_to_future_updates">Early access to future updates</string>
    <string name="get_premium">Get Premium</string>
    <string name="available_plans">Available Plans</string>
    <string name="most_popular">Most Popular</string>
    <string name="monthly">MONTHLY</string>
    <string name="per_month">PER MONTH</string>
    <string name="save_15">Save 15%</string>
    <string name="annual">ANNUAL</string>
    <string name="per_year">PER YEAR</string>
    <string name="_599">₹599.00</string>
    <string name="_59">₹59.00</string>
    <string name="cancel_subscription">Cancel Subscription</string>
    <string name="manage_subscription">Manage Subscription</string>
    <string name="current_plan_premium_monthly">Current Plan - Premium Monthly</string>
    <string name="renews_on_15_aug_2025">Renews on - 15 Aug 2025</string>
    <string name="purchased_on_15_aug_2025">Purchased on - 15 Aug 2025</string>
    <string name="member_since_15_aug_2025">Member since - 15 Aug 2025</string>
    <string name="premium_member">Premium Member</string>

    <string-array name="ai_models_display">
        <item>DeepSeek R1</item>
        <item>Qwen 3 (8B)</item>
        <item>Gemma 3N (4B)</item>
        <item>Mistral Small (24B)</item>
        <item>Hunyuan A1 (13B)</item>
        <item>Gemma 3N (2B)</item>
        <item>Kimi K2</item>
        <item>Qwen 3 (235B)</item>
    </string-array>

    <string-array name="ai_models_api">
        <item>deepseek/deepseek-r1:free</item>
        <item tools:ignore="TypographyDashes">qwen/qwen3-8b:free</item>
        <item>google/gemma-3n-e4b-it:free</item>
        <item tools:ignore="TypographyDashes">mistralai/mistral-small-3.2-24b-instruct:free</item>
        <item>tencent/hunyuan-a13b-instruct:free</item>
        <item>google/gemma-3n-e2b-it:free</item>
        <item>moonshotai/kimi-k2:free</item>
        <item tools:ignore="TypographyDashes">qwen/qwen3-235b-a22b-07-25:free</item>
    </string-array>

</resources>