<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@android:color/transparent"
    >

    <ImageView
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:contentDescription="@string/error_image"
        app:srcCompat="@drawable/error_image" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/text"
        android:text="@string/failed_to_fetch_query_please_try_again"
        android:textSize="20sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mTryAgainBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/background"
        android:text="@string/try_again"
        android:textStyle="bold"
        android:textColor="@color/highlight"
        android:layout_marginTop="8dp"/>
</LinearLayout>