<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:orientation="horizontal">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/books"
        android:src="@drawable/pdf_file_icon"
        android:layout_weight="3"
        android:padding="16dp"
        app:tint="@color/highlight" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvFileName"
        android:gravity="center_vertical"
        android:fontFamily="@font/inter"
        android:layout_weight="1"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:textColor="@color/text"
        android:text="@string/example_book_name_pdf"
        android:textSize="16sp"/>

    <ImageView
        android:id="@+id/deleteButton"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/delete"
        android:src="@drawable/more_vert"
        android:padding="16dp"
        android:layout_weight="3"
        app:tint="@color/text" />
</LinearLayout>
